# buddylink-relay

./: .gitignore  index.js  package.json  render.yaml
.workbuddy/memory/: 2026-06-25.md  2026-06-26.md  MEMORY.md
client/: index.html  package.json  preview.html  styles.css
client/src/: index.html  main.js  styles.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: commands.rs  crypto.rs  db.rs  lib.rs  main.rs  relay.rs
docs/: DEVELOPMENT.md
server/: Dockerfile  package-lock.json  package.json  render.yaml
server/src/: index.js  pairing.js  presence.js  relay.js
src/: index.js
